Refined UI and State handling

--- a/src/ui/venusUI.html
+++ b/src/ui/venusUI.html
@@ -7,6 +7,12 @@
 	  <link href="${styleSrc}" rel="stylesheet" type="text/css">
   </head>
   <body>
+	<div>
+		<input type="range" id="ledsize" name="ledsize"
+			   min="10" max="200" value="70">
+		<label for="ledsize">Size</label>
+	</div>
+	<div id="led_div"></div>
 	  <script src="${scriptSrc}"></script>
   </body>
 </html>
