add encoding (ascii, unsigned, signed, hex) support

--- a/src/memoryui/memoryUI.html
+++ b/src/memoryui/memoryUI.html
@@ -1206,7 +1206,7 @@
 							<div class="control">
 								<div class="field">
 									<div class="select is-small">
-										<select id="display-settings" onchange="driver.updateRegMemDisplay()">
+										<select id="display-settings" onchange="driver.updateRegMemDisplay(this.value)">
 											<option selected>Hex</option>
 											<option>Decimal</option>
 											<option>Unsigned</option>
