--- a/src/ledmatrix/venusLedMatrixUI.html
+++ b/src/ledmatrix/venusLedMatrixUI.html
@@ -7,6 +7,11 @@
 	  <link href="${styleSrc}" rel="stylesheet" type="text/css">
   </head>
   <body>
+	<div>
+		<input type="range" id="led_size_slider"
+			   min="10" max="200" value="100">
+		<label for="led_size_slider">Size</label>
+	</div>
 	<div id="led_div"></div>
 	  <script src="${scriptSrc}"></script>
   </body>
