Jump to address also when user confirms his entry by pressing return key (and not only when edit box is left)

--- a/src/memoryui/memoryUI.html
+++ b/src/memoryui/memoryUI.html
@@ -1022,7 +1022,7 @@
 									</div>
 									<div class="field-body is-expanded">
 										<input id="memMove" class="input is-small"
-											onblur="if (this.value !== ''){driver.moveMemoryLocation(this.value);this.value='';}"
+											onchange="if (this.value !== ''){driver.moveMemoryLocation(this.value);this.value='';}"
 											spellcheck="false">
 									</div>
 								</div>
