Enhance memory view and bump to new version

--- a/src/memoryui/memoryUI.html
+++ b/src/memoryui/memoryUI.html
@@ -878,120 +878,140 @@
 								<table id="memory-table" class="table is-striped">
 									<colgroup>
 										<col id="addr-column">
-										<col id="byte0-column">
-										<col id="byte1-column">
-										<col id="byte2-column">
-										<col id="byte3-column">
+										<col id="memcolumn0">
+										<col id="memcolumn1">
+										<col id="memcolumn2">
+										<col id="memcolumn3">
 									</colgroup>
 									<thead>
 										<tr>
 											<th>Address</th>
-											<th>+0</th>
-											<th>+1</th>
-											<th>+2</th>
-											<th>+3</th>
+											<th class="memcolumn0-cell" id="memcolumn0-hdr">+0</th>
+											<th class="memcolumn1-cell" id="memcolumn1-hdr">+1</th>
+											<th class="memcolumn2-cell" id="memcolumn2-hdr">+2</th>
+											<th class="memcolumn3-cell" id="memcolumn3-hdr">+3</th>
 										</tr>
 									</thead>
 									<tr id="mem-row-6">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-5">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-4">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-3">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-2">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-1">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row-0">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--1">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--2">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--3">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--4">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--5">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 									<tr id="mem-row--6">
 										<td>0x00000000</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
-										<td>0</td>
+										<td class="memcolumn0-cell">0</td>
+										<td class="memcolumn1-cell">0</td>
+										<td class="memcolumn2-cell">0</td>
+										<td class="memcolumn3-cell">0</td>
 									</tr>
 								</table>
 							</div>
-							<div class="panel-block">
-								<div class="field is-horizontal">
-									<div class="field-label is-normal">
-										<label class="label">Jump to</label>
+							<div class="table-block">
+								<div class="table-row">
+									<div class="field-label">
+										<label class="label" for="mem-move">Address:</label>
 									</div>
 									<div class="field-body">
-										<div class="field is-narrow">
+										<div class="field">
+											<input id="mem-move" class="input"
+												onchange="if (this.value !== ''){driver.moveMemoryLocation(this.value);this.value='';}"
+												spellcheck="false">
+										</div>
+										<div class="field">
+											<div class="control">
+												<input type="button" class="button" value="Up"
+													onclick="driver.moveMemoryUp()">
+												<input type="button" class="button" value="Down"
+													onclick="driver.moveMemoryDown()">
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-row">
+									<div class="field-label">
+										<label class="label">Jump to:</label>
+									</div>
+									<div class="field-body">
+										<div class="field">
 											<div class="control">
 												<div class="select">
 													<select id="address-jump" onchange="driver.moveMemoryJump()">
@@ -1004,26 +1024,44 @@
 												</div>
 											</div>
 										</div>
-										<div class="field">
-											<div class="control">
-												<input type="button" class="button" value="Up"
-													onclick="driver.moveMemoryUp()">
-												<input type="button" class="button" value="Down"
-													onclick="driver.moveMemoryDown()">
+									</div>
+								</div>
+								<div class="table-row">
+									<div class="field-label">
+										<label class="label">Display Format:</label>
+									</div>
+									<div class="field-body">
+										<div class="control">
+											<div class="field">
+												<div class="select">
+													<select id="display-settings" onchange="driver.updateRegMemDisplay(this.value)">
+														<option selected>Hex</option>
+														<option>Binary</option>
+														<option>Decimal</option>
+														<option>Unsigned</option>
+														<option>ASCII</option>
+													</select>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="panel-block">
-								<div class="field is-horizontal">
+								<div class="table-row">
 									<div class="field-label">
-										<label class="label is-small" for="memMove">Address:</label>
+										<label class="label">Bytes per Row:</label>
 									</div>
-									<div class="field-body is-expanded">
-										<input id="memMove" class="input is-small"
-											onchange="if (this.value !== ''){driver.moveMemoryLocation(this.value);this.value='';}"
-											spellcheck="false">
+									<div class="field-body">
+										<div class="control">
+											<div class="field">
+												<div class="select">
+													<select id="display-rows" onchange="driver.updateBytesPerRowDisplay(this.value)">
+														<option>1</option>
+														<option>2</option>
+														<option selected>4</option>
+													</select>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1194,29 +1232,6 @@
 							</div>
 						</div>
 					</nav>
-				</article>
-			</div>
-			<div class="tile is-parent">
-				<article class="tile is-child">
-					<div class="field is-horizontal">
-						<div class="field-label is-small">
-							<label class="label">Display Settings</label>
-						</div>
-						<div class="field-body">
-							<div class="control">
-								<div class="field">
-									<div class="select is-small">
-										<select id="display-settings" onchange="driver.updateRegMemDisplay(this.value)">
-											<option selected>Hex</option>
-											<option>Decimal</option>
-											<option>Unsigned</option>
-											<option>ASCII</option>
-										</select>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 				</article>
 			</div>
 		</div>
